--- a/requirements.txt
+++ b/requirements.txt
@@ -1,209 +1,7 @@
-aiodns==3.3.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.10.11
-aiosignal==1.3.2
-altair==5.5.0
-appdirs==1.4.4
-argcomplete==3.6.2
-asgiref==3.11.0
-astroid==4.0.1
-attrs==25.1.0
-Beaker==1.12.1
-beautifulsoup4==4.13.4
-blinker==1.9.0
-blivet==3.12.1
-blivet-gui==2.6.0
-blosc2==2.7.1
-boto3==1.38.14
-botocore==1.38.14
-Bottleneck==1.4.2
-Brlapi==0.8.6
-Brotli==1.1.0
-cachetools==5.5.1
-certifi==2025.11.12
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.7
-contourpy==1.3.2
-crypt_r==3.13.1
-cryptography==44.0.0
-cupshelpers==1.0
-cycler==0.11.0
-dasbus==1.7
-dbus-python==1.3.2
-dbus_next==0.2.3
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.4.0
-distro==1.9.0
-dj-database-url==3.0.1
-Django==5.2.8
-dnf==4.23.0
-et_xmlfile==1.1.0
-fedora-third-party==0.10
-file-magic==0.4.0
-Flask==3.1.0
-fonttools==4.56.0
-fros==1.1
-frozenlist==1.5.0
-fs==2.4.16
-fsspec==2025.3.2
-gcsfs==2024.9.0
-gitdb==4.0.12
-GitPython==3.1.45
-google-api-core==2.11.1
-google-auth==2.38.0
-google-auth-oauthlib==1.2.1
-google-cloud-core==2.3.3
-google-cloud-storage==2.14.0
-google-crc32c==1.7.1
-google-resumable-media==2.7.2
-googleapis-common-protos==1.63.0
-gpg==1.24.2
-greenlet==3.1.1
-grpcio==1.48.4
-grpcio-status==1.48.4
-gunicorn==23.0.0
-h11==0.16.0
-html5lib==1.1
-humanize==4.12.0
-idna==3.10
-iso639==0.1.4
-isort==7.0.0
-itsdangerous==2.2.0
-jdcal==1.4.1
-Jinja2==3.1.6
-jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.8
-langtable==0.0.68
-libcomps==0.1.21
-libdnf==0.74.0
-louis==3.28.0
-lxml==5.3.2
-Mako==1.2.3
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-mccabe==0.7.0
-msgpack==1.1.0
-multidict==6.1.0
-narwhals==2.10.2
-ndindex==1.9.2
-nftables==0.1
-numexpr==2.10.2
-numpy==2.2.5
-oauthlib==3.2.2
-odfpy==1.4.1
-olefile==0.47
-openpyxl==3.1.2
-outcome==1.3.0.post0
-packaging==24.2
-pandas==2.2.3
-Paste==3.10.1
-perf==0.1
-pexpect==4.9.0
-pid==2.2.3
-pillow==11.1.0
-platformdirs==4.2.2
-plotly==6.4.0
-ply==3.11
-pooch==1.8.2
-productmd==1.45
-protobuf==6.33.0
-psutil==7.1.3
-psycopg2==2.9.9
-psycopg2-binary==2.9.11
-ptyprocess==0.7.0
-pwquality==1.4.5
-py-cpuinfo==9.0.0
-pyarrow==18.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycairo==1.25.1
-pycares==4.8.0
-pycparser==2.20
-pycrypto==2.6.1
-pycups==2.0.4
-pycurl==7.45.4
-pydeck==0.9.1
-pyenchant==3.2.2
-PyGObject==3.50.0
-pyinotify==0.9.6
-pykickstart==3.62
-pylint==4.0.2
-PyMySQL==1.1.1
-pyOpenSSL==25.0.0
-pyparsing==3.1.2
-pyparted==3.13.0
-PyQt5==5.15.11
-PyQt5_sip==12.16.1
-PySocks==1.7.1
-python-augeas==1.1.0
-python-dateutil==2.8.2
-python-dotenv==1.2.1
-python-linux-procfs==0.7.3
-python-meh==0.52
-python-pam==2.0.2
-pytz==2025.2
-pyudev==0.24.3
-pyxdg==0.27
-PyYAML==6.0.2
-pyynl @ file:///builddir/build/BUILD/kernel-6.14.6-build/kernel-6.14.6/linux-6.14.6-300.fc42.x86_64/tools/net/ynl
-QtPy==2.4.2
-RapidFuzz==3.11.0
-referencing==0.36.2
-regex==2024.11.6
-reportlab==4.4.0
-requests==2.32.3
-requests-file==2.0.0
-requests-ftp==0.3.1
-requests-oauthlib==1.3.1
-rpds-py==0.24.0
-rpm==4.20.1
-rsa==4.9
-s3transfer==0.12.0
-scipy==1.14.1
-selenium==4.38.0
-selinux @ file:///builddir/build/BUILD/libselinux-3.8-build/libselinux-3.8/src
-sepolicy @ file:///builddir/build/BUILD/policycoreutils-3.8-build/selinux-3.8/python/sepolicy
-setools==4.5.1
-setuptools==74.1.3
-simpleaudio==1.0.4
-simpleline==1.9.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sos==4.8.2
-soupsieve==2.7
-SQLAlchemy==2.0.40
-sqlparse==0.5.3
-streamlit==1.51.0
-systemd-python==235
-tables==3.10.1
-tabulate==0.9.0
-Tempita==0.5.2
-tenacity==9.1.2
-toml==0.10.2
-tomlkit==0.13.3
-tornado==6.5.2
-trio==0.32.0
-trio-websocket==0.12.2
-typing_extensions==4.15.0
-urllib3==2.5.0
-watchdog==6.0.0
-wcwidth==0.2.13
-webdriver-manager==4.0.2
-webencodings==0.5.1
-websocket-client==1.9.0
-Werkzeug==3.1.3
-whitenoise==6.11.0
-wsproto==1.3.2
-xarray==2025.1.1
-xkbregistry==0.3
-xlrd==2.0.1
-XlsxWriter==3.2.3
-yarl==1.13.1
-zstandard==0.23.0
+Django>=5.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+gunicorn>=21.2.0
+whitenoise>=6.6.0
+dj-database-url>=2.1.0
+psycopg2-binary>=2.9.9
